--- a/app/views/flights/new.html.erb
+++ b/app/views/flights/new.html.erb
@@ -1,9 +1,9 @@
 <%= title "Arelplane | New Flight" %>
 
-<div class='container-fluid'>
+<div class='container'>
   <div class='row'>
-    <div class='col-4'></div>
-    <div class='col-4'>
+    <div class='col-1'></div>
+    <div class='col-10'>
       <p class='light-header'>New Flight</p>
 
       <%= render 'form', flight: @flight %>
@@ -12,6 +12,6 @@
         <%= link_to "Back", :back %>
       </div>
     </div>
-    <div class='col-4'></div>
+    <div class='col-1'></div>
   </div>
 </div>
