--- a/app/views/flights/edit.html.erb
+++ b/app/views/flights/edit.html.erb
@@ -2,16 +2,16 @@
 
 <div class='container-fluid'>
   <div class='row'>
-    <div class='col-4'></div>
-    <div class='col-4'>
+    <div class='col-1'></div>
+    <div class='col-10'>
       <p class='light-header'>Edit Flight</p>
 
       <%= render 'form', flight: @flight %>
 
       <div class="actions">
-        <%= link_to "Back", flights_path %>
+        <%= link_to "Back", :back %>
       </div>
     </div>
-    <div class='col-4'></div>
+    <div class='col-1'></div>
   </div>
 </div>
