--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,7 +1,7 @@
 <div class='container-fluid'>
   <div class='row'>
-    <div class='col-4'></div>
-    <div class='col-4'>
+    <div class='col-1 col-md-4'></div>
+    <div class='col-10 col-md-4'>
       <p class='light-header'>Change your password</p>
 
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -24,6 +24,6 @@
       <% end %>
       <%= render "devise/shared/links" %>
     </div>
-    <div class='col-4'></div>
+    <div class='col-1 col-md-4'></div>
   </div>
 </div>
