--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class='container-fluid'>
   <div class='row'>
-    <div class='col-4'></div>
-    <div class='col-4'>
+    <div class='col-1 col-md-4'></div>
+    <div class='col-10 col-md-4'>
       <p class='light-header'>Forgot your password?</p>
 
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -17,6 +17,6 @@
         </div>
       <% end %>
     </div>
-    <div class='col-4'></div>
+    <div class='col-1 col-md-4'></div>
   </div>
 </div>
