--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,8 @@
 <%= title "Arelplane | Edit Account" %>
 <div class='container-fluid'>
   <div class='row'>
-    <div class='col-4'></div>
-    <div class='col-4'>
+    <div class='col-1 col-md-4'></div>
+    <div class='col-10 col-md-4'>
       <p class='light-header'>Edit Account</p>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -24,6 +24,6 @@
         </div>
       <% end %>
     </div>
-    <div class='col-4'></div>
+    <div class='col-1 col-md-4'></div>
   </div>
 </div>
