--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <%= title "Arelplane | Register" %>
 <div class='container-fluid'>
   <div class='row'>
-    <div class='col-4'></div>
-    <div class='col-4'>
+    <div class='col-1 col-md-4'></div>
+    <div class='col-10 col-md-4'>
       <p class='light-header'>Register</p>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -25,7 +25,7 @@
         </div>
       <% end %>
     </div>
-    <div class='col-4'></div>
+    <div class='col-1 col-md-4'></div>
   </div>
 </div>
 
