add great circle paths

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= favicon_link_tag 'favicon.ico' %>
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application' %>
+    <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
     <%= javascript_include_tag 'application' %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= render 'vendors/fb_pixel' %>
