--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -62,7 +62,7 @@
                   <% flight.waypoints.each do |waypoint| %>
                       <p class="ml-4">
                         <%= Location.find(waypoint.location_id).name_and_identifier %>
-                        <%= link_to 'Delete', waypoint_path(waypoint), method: :delete, data: { confirm: 'Are you sure?' } , class: "ml-2" %>
+                        <%= link_to 'Delete', waypoint_path(waypoint), method: :delete, data: { confirm: 'Are you sure?' }, remote: true, class: "ml-2 delete_waypoint" %>
                       </p>
                   <% end %>
                 <% end %>
@@ -75,7 +75,7 @@
               <td><%= flight.total_time %></td>
               <td><%= flight.pic %></td>
               <td><%= flight.distance %></td>
-              <td><%= link_to 'Delete', flight, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <td><%= link_to 'Delete', flight, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, class: 'delete_flight' %></td>
               <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
             </tr>
           <% end %>
