add mccPilotLog instructions

--- a/app/views/pages/upload_instructions.html.erb
+++ b/app/views/pages/upload_instructions.html.erb
@@ -118,13 +118,11 @@
     <h4><%= image_tag 'mccpilotlog.png'%> mccPILOTLOG</h4>
     <div class="ml-5">
       <p>
-        Download a <b>.csv</b> file from mccPILOTLOG.
-      </p>
-      <p>
+        To download your mccPILOTLOG logbook, go to the 'query' page. Next, select your parameters (or leave them empty for all flights) and press 'F10  Search'. Export data to CSV by using the second icon under 'Export data'.
+        <br>
+          <%= image_tag 'mccpilotlog_download.png' %>
+        <br>
         Once you have that file, just click "Add Flights" on this website and select mccPILOTLOG.
-      </p>
-      <p>
-        Send me a message if you know how to export mccPILOTLOG logbooks so I can update this section.
       </p>
     </div>
 
