--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -17,7 +17,7 @@
           <div class="col-12 col-lg-6">
             <div class="mb-3">
               <%= form.label :flight_date, class: 'light-sub-text' %><br />
-              <%= form.date_select :flight_date, id: :flight_flight_date %><br />
+              <%= form.text_field :flight_date, id: :flight_flight_date, class: 'form-control' %><br />
             </div>
           </div>
           <div class="col-12 col-lg-6">
