give date format

--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col-12 col-lg-6">
             <div class="mb-3">
-              <%= form.label :flight_date, class: 'light-sub-text' %><br />
+              <%= form.label :flight_date, 'Flight Date, e.g. dd/mm/yyyy', class: 'light-sub-text' %><br />
               <%= form.text_field :flight_date, id: :flight_flight_date, class: 'form-control' %><br />
             </div>
           </div>
