update instructions for flylogio

--- a/app/views/pages/upload_instructions.html.erb
+++ b/app/views/pages/upload_instructions.html.erb
@@ -192,5 +192,23 @@
         Send me a message if you know how to export Logbook Pro logbooks so I can update this section.
       </p>
     </div>
+
+    <hr>
+    <a name="flylogio"></a>
+    <h4><%= image_tag 'flylogio.png'%> FlyLogio</h4>
+    <div class="ml-5">
+      <p>
+        Download a <b>.csv</b> file from FlyLogio. The filename will look like this:
+      </p>
+      <p>
+        "<b>logbook-csv-export.csv</b>"
+      </p>
+      <p>
+        Once you have that file, just click "Add Flights" on this website and select FlyLogio.
+      </p>
+      <p>
+        Send me a message if you know how to export FlyLogio logbooks so I can update this section.
+      </p>
+    </div>
   </div>
 </div>
