--- a/app/views/pages/upload_instructions.html.erb
+++ b/app/views/pages/upload_instructions.html.erb
@@ -29,6 +29,9 @@
       <li class="nav-item">
         <a class="nav-link dark-link" href="#logbookpro">Logbook Pro</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link dark-link" href="#flylogio">FlyLogio</a>
+      </li>
     </ul>
 
     <a name="basics"></a>
