add proPilot logbook support

--- a/app/views/flights/_logbook_upload_modal.html.erb
+++ b/app/views/flights/_logbook_upload_modal.html.erb
@@ -33,8 +33,10 @@
         <%= render 'flights/select_lb_provider', name: 'Logbook Pro' %>
         <!-- Garmin Pilot -->
         <%= render 'flights/select_lb_provider', name: 'Garmin Pilot' %>
-        <!-- FlyLogio Pilot -->
+        <!-- FlyLogio -->
         <%= render 'flights/select_lb_provider', name: 'FlyLogio' %>
+        <!-- PilotPro -->
+        <%= render 'flights/select_lb_provider', name: 'PilotPro' %>
         <!-- Manual -->
         <div class='row mb-2 ml-2 mr-md-2 h-100'>
           <div class="col-1">
