--- a/app/views/pages/upload_instructions.html.erb
+++ b/app/views/pages/upload_instructions.html.erb
@@ -32,6 +32,9 @@
       <li class="nav-item">
         <a class="nav-link dark-link" href="#flylogio">FlyLogio</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link dark-link" href="#aviationpilotlogbook">Avaition Pilot Logbook (Android App)</a>
+      </li>
     </ul>
 
     <a name="basics"></a>
@@ -211,6 +214,24 @@
       </p>
       <p>
         Send me a message if you know how to export FlyLogio logbooks so I can update this section.
+      </p>
+    </div>
+
+    <hr>
+    <a name="aviationpilotlogbook"></a>
+    <h4><%= image_tag 'aviationpilotlogbook.png'%>Avation Pilot Logbook (Android App)</h4>
+    <div class="ml-5">
+      <p>
+        Download a <b>.csv</b> file from Avation Pilot Logbook. The filename will look like this:
+      </p>
+      <p>
+        "<b>logbook-csv-export.csv</b>"
+      </p>
+      <p>
+        Once you have that file, just click "Add Flights" on this website and select Avation Pilot Logbook.
+      </p>
+      <p>
+        Send me a message if you know how to export Avation Pilot Logbook logbooks so I can update this section.
       </p>
     </div>
   </div>
