add usernames and slugs and automatically create them when a user creates or updates their account

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,6 +12,9 @@
           <%= f.label :name, class: 'light-sub-text' %><br />
           <%= f.text_field :name, class: 'form-control' %><br />
 
+          <%= f.label :username, class: 'light-sub-text' %><br />
+          <%= f.text_field :username, class: 'form-control' %><br />
+
           <%= f.label :current_password, class: 'light-sub-text' %> <i class="light-sub-text">(we need your current password to confirm your changes)</i><br />
           <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
         </div>
