--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= title "Arelplane | #{@user.username}" %>
+<%= title "Arelplane | #{@user.name}" %>
 <%= content_tag :div, id: "current_page", data: {page: @user.id} do %>
 <% end %>
 
