--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,8 @@
           <%= f.email_field :email, autofocus: true, class: 'form-control' %>
           <%= f.label :name, class: 'light-sub-text' %><br />
           <%= f.text_field :name, class: 'form-control' %>
+          <%= f.label :username, class: 'light-sub-text' %>
+          <%= f.text_field :username, class: 'form-control' %>
           <%= f.label :password, class: 'light-sub-text' %>
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
