add username remove slug

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,7 +13,14 @@
           <%= f.text_field :name, class: 'form-control' %><br />
 
           <%= f.label :username, class: 'light-sub-text' %><br />
-          <%= f.text_field :username, class: 'form-control' %><br />
+          <% if @user.username.blank? %>
+            <div class="input-group mb-2 mb-sm-0">
+              <div class="input-group-addon">@</div>
+              <%= f.text_field :username, class: 'form-control' %><br />
+            </div>
+          <% else %>
+            <%= f.text_field :username, class: 'form-control' %><br />
+          <% end %>
 
           <%= f.label :current_password, class: 'light-sub-text' %> <i class="light-sub-text">(we need your current password to confirm your changes)</i><br />
           <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
