--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,8 +5,15 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-
+    <%= form_with url: user_search_path, method: :post, local: true, class: 'form-inline' do |form| %>
+      <%= form.collection_select :user_id, User.page, :id, :username, { include_blank: true}, class: 'user_lookup form-control mr-sm-2' %>
+      <%= form.submit 'Go', class: 'btn btn-outline-light ml-2' %>
+    <% end %>
     <ul class="navbar-nav mr-auto">
+
+    </ul>
+
+    <ul class="navbar-nav">
       <li class="nav-item active">
         <% if current_user %>
         <%= link_to 'MANAGE FLIGHTS', flights_path, class: 'nav-link' %>
@@ -18,14 +25,6 @@
         <%= link_to 'LOG OUT', destroy_user_session_path, method: :delete, class: 'nav-link' %>
         <% end %>
       </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0 mr-2">
-      <%= form_with(url: user_search_path, local: true) do |form| %>
-        <%= form.collection_select :user_id, User.page, :id, :username, { include_blank: true}, class: 'user_lookup form-control mr-sm-2' %>
-        <%= form.submit 'Go', class: 'btn btn-outline-light my-2 my-sm-0' %>
-      <% end %>
-    </form>
-    <ul class="navbar-nav">
       <% if current_user %>
         <li class="nav-item active">
           <button href="#" data-toggle='modal' data-target='#logbookUploadModal' class='btn btn-primary'>Add Flights</button>
