--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -72,8 +72,8 @@
               <td><%= Location.find(flight.to_id).name_and_identifier %></td>
               <td><%= flight.time_out %></td>
               <td><%= flight.time_in %></td>
-              <td><%= flight.total_time %></td>
-              <td><%= flight.pic %></td>
+              <td><%= flight.total_time.try(:round, 1) %></td>
+              <td><%= flight.pic.try(:round, 1) %></td>
               <td><%= flight.distance %></td>
               <td><%= link_to 'Delete', flight, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, class: 'delete_flight' %></td>
               <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
