--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -2,3 +2,5 @@ $highlightColor: #F514A6;
 $lightLinkColor: white;
 $darkLinkColor: #191A1A;
 $lightSubTextColor: #C2C2C2;
+$primaryTextColor: black;
+$lightTextColor: white;
