--- a/app/views/users/_side_bar.html.erb
+++ b/app/views/users/_side_bar.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="sub-text pl-3">
       <%= render 'follow_form' %>
-      Likes: 12
+      Likes: <%= @user.followers.count %>
     </div>
     <div class='sub-text pl-3 mb-5'>
       Joined <%= @user.created_at.strftime('%B %e, %Y') %>
