--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -35,6 +35,54 @@
           </div>
         </div>
       </div>
+
+      <table class='warningTable table-striped table-inverse table-bordered'>
+        <thead>
+          <tr class="table-danger">
+            <th>Flight date</th>
+            <th>Aircraft</th>
+            <th>Origin</th>
+            <th>Destination</th>
+            <th>Time out</th>
+            <th>Time in</th>
+            <th>Total time</th>
+            <th>Pic</th>
+            <th>Distance</th>
+            <th colspan="2"></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% Flight.flights_with_missing_identifiers_for(current_user).each do |flight| %>
+            <tr class="table-danger">
+              <td><%= flight.flight_date.to_date.to_formatted_s(:long) rescue flight.flight_date %>
+                <% if flight.waypoints.present? %>
+                  <br><br>
+                  Waypoints:
+                  <br>
+                  <% flight.waypoints.each do |waypoint| %>
+                      <p class="ml-4">
+                        <%= Location.find(waypoint.location_id).name_and_identifier %>
+                        <%= link_to 'Delete', waypoint_path(waypoint), method: :delete, data: { confirm: 'Are you sure?' }, remote: true, class: "ml-2 delete_waypoint" %>
+                      </p>
+                  <% end %>
+                <% end %>
+              </td>
+              <td><%= flight.aircraft_id %></td>
+              <td><%= Location.find(flight.from_id).name_and_identifier %></td>
+              <td><%= Location.find(flight.to_id).name_and_identifier %></td>
+              <td><%= flight.time_out %></td>
+              <td><%= flight.time_in %></td>
+              <td><%= flight.total_time.try(:round, 1) %></td>
+              <td><%= flight.pic.try(:round, 1) %></td>
+              <td><%= flight.distance %></td>
+              <td><%= link_to 'Delete', flight, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, class: 'delete_flight' %></td>
+              <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+
       <table class='table table-striped table-inverse table-bordered'>
         <thead>
           <tr>
