--- a/app/assets/stylesheets/bootstrap-overrides.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 .btn-primary {
   background-color: #00CED6;
   border-color: #00CED6;
@@ -40,5 +42,9 @@
 }
 
 .warningTable, .warningTable td{
-   border-color: red;
+   border-color: $warningColor;
+}
+
+.warningTable, .warningTable th{
+   border-color: $warningColor !important;
 }
