--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,12 @@
     <meta property="og:title" content="<%= content_for?(:title) ? content_for(:title) : 'Arelplane' %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= image_url "demo-img" %>" />
+    <meta property="og:image" content="<%= image_url "demo-img.png" %>" />
     <meta property="og:description" content="A visual logbook!" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Arelplane" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="apple-touch-icon" href="<%= image_url "apple-touch-icon-152x152" %>" />
+    <link rel="apple-touch-icon" href="<%= image_url "apple-touch-icon-152x152.png" %>" />
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
     <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
