--- a/app/views/users/_unfollow_button.html.erb
+++ b/app/views/users/_unfollow_button.html.erb
@@ -1,3 +1,3 @@
 <%= form_for(current_user.active_relationships.find_by(following_id: @user.id), html: {method: :delete}, remote: true) do |f| %>
-  <%= f.submit 'FOLLOWING', class: 'following-button' %>
+  <%= f.submit 'LIKED 😁', class: 'following-button' %>
 <% end %>
