should solve missing apple icon errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Arelplane" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="apple-touch-icon" href="<%= image_url "apple-touch-icon-152x152.png" %>" />
+    <%= render 'layouts/apple_touch_icons' %>
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
     <%= javascript_pack_tag 'application' %>
