--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,4 +1,5 @@
 @import "colors";
+@import "fonts";
 
 html, body {
   height: 100%;
@@ -11,13 +12,13 @@ html {
 
 body {
   font-family: 'Nunito', sans-serif;
-  background-color: #191A1A;
+  background-color: $darkLinkColor;
 }
 
 a {
   color: $highlightColor;
   font-family: 'Nunito', sans-serif;
-  font-weight: 200;
+  font-weight: $extraLight;
 }
 
 a:hover {
@@ -35,7 +36,7 @@ a:hover {
 
 h6 {
   color: white;
-  font-weight: 300;
+  font-weight: $light;
 }
 
 .align-right {
@@ -52,74 +53,41 @@ h6 {
 
 .header-title {
   color: white;
-  font-family: 'Nunito Sans', sans-serif;
-  font-weight: 900;
+  font-family: $baseFont;
+  font-weight: $black;
   font-size: 1.5rem;
   letter-spacing: 0.25rem;
 }
 
 .header-text {
-  color: #191A1A;
-  font-family: 'Nunito Sans', sans-serif;
-  font-weight: 800;
+  color: $darkLinkColor;
+  font-family: $baseFont;
+  font-weight: $extraBold;
   font-size: 2.25rem;
 }
 
 .sub-text {
-  color: #343332;
-  font-family: 'Nunito Sans', sans-serif;
-  font-weight: 300;
+  color: $primaryTextColor;
+  font-family: $baseFont;
+  font-weight: $light;
   font-size: 1.12rem;
 }
 
 .light-header {
   color: white;
-  font-family: 'Nunito Sans', sans-serif;
-  font-weight: 800;
+  font-family: $baseFont;
+  font-weight: $extraBold;
   font-size: 1.5rem;
 }
 
 .light-sub-text {
   color: $lightSubTextColor;
-  font-family: 'Nunito Sans', sans-serif;
-  font-weight: 200;
+  font-family: $baseFont;
+  font-weight: $extraLight;
   font-size: 1.12rem;
 }
 
 .remove-lr-padding {
   padding-right: 0;
   padding-left: 0;
-}
-
-.follow-button {
-  border: 0.125rem solid $primaryTextColor;
-  min-width: 8.1rem;
-  height: 2.7rem;
-  font-size: 0.9rem;
-  font-weight: 600;
-  font-family: 'Nunito', sans-serif;
-  cursor: pointer;
-}
-
-.follow-button-normal {
-  @extend .follow-button;
-  background-color: white;
-  color: $primaryTextColor;
-}
-.following-button {
-  @extend .follow-button;
-  background-color: $primaryTextColor;
-  color: white;
-}
-.clear-follow-button {
-  @extend .follow-button;
-  background-color: Transparent;
-  color: $lightTextColor;
-  border-color: $lightTextColor;
-}
-.clear-following-button {
-  @extend .follow-button;
-  background-color: Transparent;
-  color: $lightTextColor;
-  border-color: $lightTextColor;
 }
