--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,4 +1,4 @@
-$secondaryColor: #5DCAD3;
+$secondaryColor: #C2C2C2;
 $highlightColor: #F514A6;
 $lightLinkColor: white;
 $darkLinkColor: #191A1A;
@@ -7,3 +7,5 @@ $primaryTextColor: #343234;
 $lightTextColor: white;
 $warningColor: #ffc107;
 $secondaryButtonColor: #7F7F7F;
+
+$homeSidebarBackground: white;
