--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,14 +5,14 @@
 <div class='container-fluid'>
   <div class='row'>
     <div class='col-md-3 col-12 d-none d-md-block remove-lr-padding' id='user-sticky-sidebar'>
-      <%= render 'users/side_bar' %>
+      <%= render 'users/profile/side_bar' %>
     </div>
     <div class='col-md-9 col-12 remove-lr-padding' id='user-map'>
-      <%= render 'users/share_button' %>
+      <%= render 'users/profile/share_button' %>
       <div class='user-map' id='mapid'></div>
     </div>
     <div class='col-md-3 col-12 d-md-none remove-lr-padding' id='user-sticky-sidebar'>
-      <%= render 'users/side_bar' %>
+      <%= render 'users/profile/side_bar' %>
     </div>
   </div>
 </div>
