--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,14 +1,15 @@
 <%= title "Arelplane | Home" %>
 
-<div class='container-fluid'>
+<div class='container-fluid home_page'>
   <div class='row'>
-    <div class='col-md-3 col-12 d-none d-md-block remove-lr-padding' id='home-sticky-sidebar'>
+    <div class='col-md-3 col-12 d-none d-md-block remove-lr-padding' id='sticky-sidebar'>
       <%= render 'users/home_page/side_bar' %>
     </div>
-    <div class='col-md-9 col-12 remove-lr-padding'>
-      Blarg
+    <div class='col-md-6 col-12 remove-lr-padding mt-4' id='main_feed'>
+      <%= render 'users/home_page/main_feed' %>
     </div>
-    <div class='col-md-3 col-12 d-md-none remove-lr-padding' id='home-sticky-sidebar'>
+
+    <div class='col-md-3 col-12 d-md-none remove-lr-padding' id='sticky-sidebar'>
       <%= render 'users/home_page/side_bar' %>
     </div>
   </div>
